# code-review-luna

./: .gitignore  README.md  api_client.py  blast_map_demo.py  config.example.yaml  config.py  config.yaml  confirmer.py  cr.py  diff_reader.py  history_renderer.py  hook_installer.py  install.ps1  install.sh  luna.py  luna_fix.py  pyproject.toml  reporter.py  requirements.txt  runtime_context.py  skill_loader.py  terminal_renderer.py  test_importer.py  web_reporter.py  web_server.py
.luna-reports/: 2026-06-11_1137_report.md  2026-06-11_1143_report.md  2026-06-11_1337_report.md  2026-06-11_1344_report.md  2026-06-11_1435_report.md  2026-06-11_1554_report.md  2026-06-11_1618_report.md  2026-06-12_1637_report.md  latest.json
phases/: _vue_utils.py  adversarial_verifier.py  api_change_detector.py  backend_adapter_registry.py  backend_context_pack.py  backend_generic_symbol_locator.py  backend_graph_engine.py  backend_language_adapter.py  backend_language_profiles.py  backend_models.py  backend_review.py  backend_risk_propagation.py  blast_radius.py  caller_context.py  code_quality.py  context_builder.py  context_graph.py  context_pack.py  context_savings.py  csharp_context_graph.py  csharp_symbol_locator.py  domain_classifier.py  gitlab_client.py  history_reader.py  hybrid_search.py  migration_analyzer.py  mr_reviewer.py  openapi_analyzer.py  proto_analyzer.py  risk_propagation.py  sqlite_graph.py  surprise_analyzer.py  symbol_locator.py
tests/: test_adversarial_verifier.py  test_adversarial_wiring.py  test_api_client.py  test_backend_adapter_registry.py  test_backend_context_pack.py  test_backend_generic_symbol_locator.py  test_backend_graph_engine.py  test_backend_language_profiles.py  test_backend_pipeline.py  test_backend_review.py  test_backend_risk_propagation.py  test_blast_radius.py  test_caller_context.py  test_code_quality.py  test_config.py  test_config_domains.py  test_confirmer.py  test_context_builder.py  (+27 more)
(+49 files in other folders)
