[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "code-reviewer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "anthropic>=0.28",
    "pyyaml>=6.0",
]

[project.scripts]
cr = "cr:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
